--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <!-- Footer -->
         <footer class="game-footer">
-            <p>💻 A Gamified Journey Through Web Computing | Created with ❤️ | Your Progress is Auto-Saved</p>
+            <p>💻 Gamified Journey Through Web Computing | By Daniel Wang 👤</p>
         </footer>
 
     </div>
